--- a/stage_1/task_7/index.html
+++ b/stage_1/task_7/index.html
@@ -925,6 +925,33 @@
         #section-7 .left:hover ~ .right figcaption{
             width: 51%;
         }
+
+        #section-8{
+            height: 270px;
+        }
+
+        #section-8 h3{
+            font-size: 21px;
+            text-align: center;
+            font-weight: lighter;
+            line-height: 1;
+            margin: 118px auto 0;
+        }
+
+        #section-8 hr{
+            width: 30px;
+            margin: 10px auto;
+            border: 1px #e74f4d solid;
+        }
+
+        #section-8 p{
+            width: 425px;
+            text-align: center;
+            font-size: 12px;
+            color: #aaa;
+            line-height: 1.5;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
@@ -1123,7 +1150,7 @@
         </figure>
     </section>
     <section id="section-8">
-        <h3>成为我们的志愿者</h3>
+        <h3 class="simHei">成为我们的志愿者</h3>
         <hr/>
         <p>
             新世界的大家庭需要每一个爱生活的人加入，如果你够年轻，有梦想，有激情<br/>
